--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <p class="bread">Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
+    <div id="blueberry">Number 2 - I'm one ID.</div>
     <p class="bread focaccia">Number 3 - I'm a class, but cooler!</p>
     <div>Number 4 - I'm another ID.</div>
     <p class="bread">Number 5 - I'm a class!</p>
