--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -12,6 +12,6 @@
     <div id="blueberry">Number 2 - I'm one ID.</div>
     <p class="bread focaccia">Number 3 - I'm a class, but cooler!</p>
     <div>Number 4 - I'm another ID.</div>
-    <p class="bread">Number 5 - I'm a class!</p>
+    <p class="bread butter jam">Number 5 - I'm a class!</p>
   </body>
 </html>
