Add id attribute

--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -11,7 +11,7 @@
     <p class="bread">Number 1 - I'm a class!</p>
     <div id="blueberry">Number 2 - I'm one ID.</div>
     <p class="bread focaccia">Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p class="bread butter jam">Number 5 - I'm a class!</p>
+    <div id="butter">Number 4 - I'm another ID.</div>
+    <p class="bread">Number 5 - I'm a class!</p>
   </body>
 </html>
